fix the jump to section inaccurate issue

--- a/css/style.css
+++ b/css/style.css
@@ -292,16 +292,7 @@
             scroll-margin-top: 70px; /* Added for fixed header */
         }
 
-        .section::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: white;
-            z-index: 1;
-        }
+        
 
         .container {
             max-width: 1200px;
@@ -1028,4 +1019,7 @@
     .navbar .nav-links li.has-submenu.active .submenu {
         display: block;
     }
+}
+.section-placeholder {
+    min-height: 1px;
 }
